<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="1000dp"
    android:background="@color/white"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="24dp"
    android:scrollbars="none"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/create_new_account"
            android:textColor="@color/ld_color"
            android:textSize="25sp"
            android:textStyle="bold" />

        <FrameLayout
            android:id="@+id/layoutImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imageProfile"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/background_image"
                android:scaleType="centerCrop"
                app:riv_oval="true" />

            <TextView
                android:id="@+id/textAddImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/insert_image"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </FrameLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/name"
            app:boxStrokeColor="@color/ld_color"
            app:cursorColor="@color/black"
            app:hintTextColor="?attr/colorOnSurfaceVariant">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Giới tính:"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/rgpGioiTinh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:checkedButton="@+id/radio_button_1"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbtnNam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="Nam" />

                <RadioButton
                    android:id="@+id/rbtnNu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="Nữ" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtDOB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ngày sinh: "
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/datePickerButton"
                style="?android:spinnerStyle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:onClick="openDatePicker"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Số nhà /đường"
            app:boxStrokeColor="@color/ld_color"
            app:cursorColor="@color/black"
            app:hintTextColor="?attr/colorOnSurfaceVariant">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputSoNha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:maxLines="1"

                />


        </com.google.android.material.textfield.TextInputLayout>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp">

            <Spinner
                android:id="@+id/cmbTinh"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ld_custom_edittext"
                android:completionThreshold="1"
                android:ems="10"
                android:fontFamily="@font/roboto_regular"
                android:hint="Tỉnh/Thành phố"
                android:inputType="text"
                android:padding="10dp"
                android:text=""
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="16dp" />

            <Spinner
                android:id="@+id/cmbQuan"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ld_custom_edittext"
                android:completionThreshold="1"
                android:ems="10"
                android:fontFamily="@font/roboto_regular"
                android:hint=" Quận/ Huyện"
                android:inputType="text"
                android:padding="10dp"
                android:text=""
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="16dp" />

            <Spinner
                android:id="@+id/cmbXa"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ld_custom_edittext"
                android:completionThreshold="1"
                android:ems="10"
                android:fontFamily="@font/roboto_regular"
                android:hint="Xã/ phường"
                android:inputType="text"
                android:padding="10dp"
                android:text=""
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="16dp" />

        </TableRow>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical">

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:ccp_countryPreference="us,in" />

            <EditText
                android:id="@+id/editText_carrierNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:editable="false"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:paddingStart="7dp"
                android:singleLine="true" />


            <ImageView
                android:id="@+id/img_Check_Phone"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/hn_ic_close"
                android:visibility="invisible" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:hint="Email"
            app:boxStrokeColor="@color/ld_color"
            app:cursorColor="@color/black"
            app:hintTextColor="?attr/colorOnSurfaceVariant">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEmail"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"


                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            app:boxStrokeColor="@color/ld_color"
            app:cursorColor="@color/black"
            app:endIconMode="password_toggle"
            app:hintTextColor="?attr/colorOnSurfaceVariant">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPassword"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:imeOptions="actionNext"
                android:inputType="textPassword"


                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/confirm_password"
            app:boxStrokeColor="@color/ld_color"
            app:cursorColor="@color/black"
            app:endIconMode="password_toggle"
            app:hintTextColor="?attr/colorOnSurfaceVariant">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:imeOptions="actionDone"
                android:inputType="textPassword"


                />

        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:animateLayoutChanges="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSignUp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:backgroundTint="@color/ld_color"
                app:cornerRadius="8dp" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:visibility="invisible" />
        </FrameLayout>


        <TextView
            android:id="@+id/textSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sign_in"
            android:textColor="@color/primary"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>